// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Flex props 1`] = `
Object {
  "colorMode": "default",
  "style": Array [
    Object {
      "display": "flex",
    },
  ],
}
`;

exports[`composition render props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex;"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); display: flex;"
>
  hello world
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex;"
>
  Hello world
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); display: flex;"
>
  Hello world
</div>
`;

exports[`theming Flex.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); display: flex;"
>
  hello world
</div>
`;
